luci-p910nd: select p910nd
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/luci2-p910nd/Makefile
+++ b/luci2-p910nd/Makefile
@@ -9,7 +9,7 @@ define Package/luci2-p910nd
   SECTION:=luci2
   CATEGORY:=LuCI2
   TITLE:=LuCI2 p910nd module
-  DEPENDS:=luci2 p910nd
+  DEPENDS:=luci2 +p910nd
 endef
 
 define Package/luci2-p910nd/description
